test/syc/bad/shortlong.c
/*
 * Both short and long specifier
 */

short long a;
